testdata/baselines/reference/submodule/compiler/pathMappingInheritedBaseUrl.errors.txt
/project/index.ts(1,20): error TS2307: Cannot find module 'p1' or its corresponding type declarations.
/project/tsconfig.json(3,3): error TS5102: Option 'baseUrl' has been removed. Please remove it from your configuration.
  Use '"paths": {"*": "../other/*"}' instead.


==== /project/tsconfig.json (1 errors) ====
    {
      "extends": "../other/tsconfig.base.json",
      "compilerOptions": {
      ~~~~~~~~~~~~~~~~~
!!! error TS5102: Option 'baseUrl' has been removed. Please remove it from your configuration.
!!! error TS5102:   Use '"paths": {"*": "../other/*"}' instead.
        "module": "commonjs",
        "paths": {
          "p1": ["./lib/p1"]
        }
      }
    }
    
==== /project/index.ts (1 errors) ====
    import { p1 } from "p1";
                       ~~~~
!!! error TS2307: Cannot find module 'p1' or its corresponding type declarations.
    
==== /other/tsconfig.base.json (0 errors) ====
    {
      "compilerOptions": {
        "baseUrl": "."
      }
    }
    
==== /other/lib/p1/index.ts (0 errors) ====
    export const p1 = 0;
    